2004-05-26  David Byers  <byers@lysator.liu.se>

	Fix bug 1326:
	* lyskom-rest.el (lyskom-format-html-plaintext): Corrected
	arguments to lyskom-button-transform-text.

2004-05-25  David Byers  <byers@lysator.liu.se>

	* lyskom-rest.el (lyskom-format-aux-help): Handle non-integer
	(i.e. floating point) numbers somewhat more gracefully.

2004-05-23  David Byers  <byers@lysator.liu.se>

	* lyskom-buttons.el (kom-button-click): Support w3m links.

	Support w3m; fontify urls when not rendering html:
	* lyskom-rest.el (lyskom-w3m-region): New function.
	(lyskom-w3-region): Use lyskom-render-html-region.
	(lyskom-render-html-region): New function.
	(lyskom-format-htmal-plaintext): New function.
	(lyskom-format-html): Made generic.
	(lyskom-format-html-w3): New function.
	(lyskom-format-html-w3m): New function.

	* vars.el.in (lyskom-format-special): When HTML formatting is off,
	fontify URLs and stuff.

	* lyskom-rest.el (w3-fetch): Don't call w3-finish-drawing. It used
	to be necessary, but now it causes the client to hang.
	(smiley-region): Support a stack of formatting functions.

2004-05-12  David Byers  <byers@lysator.liu.se>

	Fix bug 1320:
	* lyskom-rest.el (lyskom-is-loaded): Seed the randomizer.

2004-05-04  David Byers  <byers@lysator.liu.se>

	* vars.el.in (kom-old-farts-text-prompt-strategy): Corrected
	format of this variable.

2004-05-03  David Byers  <byers@lysator.liu.se>

	* NEWS-0.48: Updated to here.

2004-05-02  David Byers  <byers@lysator.liu.se>

	* utilities.el (lyskom-eq-dash): New function.
	(lyskom-tnpa-prompt): New function.
	(lyskom-tnpa-valid): New function.
	(lyskom-tnpa-add-property): New function.
	(lyskom-tnpa-text-no): New function.
	(lyskom-tnpa-text-property): New function.
	(lyskom-tnpa-apply-strategy): New function.
	(lyskom-read-text-no-prefix-arg): Reimplementation.
	(lyskom-maybe-get-commented-text): Emptied parameter list.
	(lyskom-maybe-get-footnoted-text): Ditto.
	(lyskom-get-explicit-text): Removed.